
Änderungen
----------

v0.7.1 (??.05.2010)
 * Model classes extended

v0.7.0 (17.05.2010)
 * Manage Teams: SQL error fixed

v0.6.5 (11.05.2010) (not released)
 * All dependencies to tx_div removed
 * Clubs: Main sorting field for Selectbox is now city and then name. 
 * Team: Thumbnail for logo in TCA-Form
 * Dependency to DAM is optional now. But there are some features lost without DAM!

v0.6.3 (02.01.2010)
 * #25: Quick input field for liveticker 

v0.6.2 (22.11.2009)
 * #17: New relation stadiums to tt_address 

v0.6.1 (08.11.2009)
 * #12 old sub-module for matchtable creation removed

v0.6.0 (07.11.2009)
 * New class tx_cfcleague_util_Cache
 * New methods in tx_cfcleague_models_Club

v0.5.6 (06.11.2009) (not released)
 * Multiple agegroups for competitions
 * Age group field for teams
 * New service class for clubs
 * Matchnote types can be extended without PHP code

v0.5.5 (18.10.2009) (not released)
 * Performance-Issue in Match-Record solved. Unnecessary lookup of profiles removed.
 * Logo for competition added
 * BE-Modules: Create competition from BE-Module
 * BE-Modules: Module competition->teams extended. It is possible to add teams from current page to a competition.
 * BE-Modules: orderby in profile search fixed
 * Handling of logos changed. Club records can handle several logos. There is a new selectbox in team record to select one of these club logos.
 * BE-Modules: Module competition->match table rewritten. Opponents can be changed before match creation. Automatic lookup for keystrings.
 * BE-Modules: Module "Manage Team" rewritten.

v0.5.4 (25.01.2009)
 * Bugfix: Mayday message occurred when new profiles were created

v0.5.3 (06.01.2009)
 * Target page for new team notes is always taken from team
 * Missing include of tx_div fixed

v0.5.2 (06.01.2009) (not released)
 * New field to set profile types
 * Profile merge supports team notes
 * New History-Button in profile search
 * New BE module to manage team notes