@@ -4,6 +4,7 @@
 
 v0.7.1 (??.05.2010)
  * Model classes extended
+ * Prev/Next-Buttons in Round-Selector
 
 v0.7.0 (17.05.2010)
  * Manage Teams: SQL error fixed
